# TimeMarkers

./: README.md  TimeMarker.py  Util.py  pyproject.toml  setup.py
TimeMarkers/: timemarkers.py
TimeMarkers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/TimeMarker/: TimeMarker.py  __init__.py
